org.eclipse.ui.intro.universal/themes/circles/html/shared.css
/* ... */
#navigation-links a#firststeps:hover img,
#navigation-links a#firststeps:focus img,
#navigation-links a#firststeps:active img { 
	background-image : url(../graphics/icons/ctool/fs_nav_hover.gif); }

#navigation-links a#tutorials img { 
	background-image : url(../graphics/icons/ctool/tu_nav_32.gif); 
}
#navigation-links a#tutorials:hover img,
#navigation-links a#tutorials:active img,
#navigation-links a#tutorials:focus img { 
	background-image : url(../graphics/icons/ctool/tu_nav_hover.gif); 
}

#navigation-links a#samples img { 
	background-image : url(../graphics/icons/ctool/sa_nav_32.gif); 
}
#navigation-links a#samples:hover img,
#navigation-links a#samples:active img,
#navigation-links a#samples:focus img { 
	background-image : url(../graphics/icons/ctool/sa_nav_hover.gif); 
}

#navigation-links a#whatsnew img { 
	background-image : url(../graphics/icons/ctool/wn_nav_32.gif); 
}
#navigation-links a#whatsnew:hover img,
#navigation-links a#whatsnew:focus img,
#navigation-links a#whatsnew:active img { 
	background-image : url(../graphics/icons/ctool/wn_nav_hover.gif); 
}

#navigation-links a#migrate img { 
	background-image : url(../graphics/icons/ctool/mi_nav_32.gif); 
}
#navigation-links a#migrate:hover img,
#navigation-links a#migrate:focus img,
#navigation-links a#migrate:active img { 
	background-image : url(../graphics/icons/ctool/mi_nav_hover.gif); 
}

#navigation-links a#webresources img { 
	background-image : url(../graphics/icons/ctool/wr_nav_32.gif); 
}
#navigation-links a#webresources:hover img,
#navigation-links a#webresources:focus img,
#navigation-links a#webresources:active img { 
	background-image : url(../graphics/icons/ctool/wr_nav_hover.gif); 
}

#navigation-links a#workbench {
	position : absolute;  
	left : 494px; 
	text-align : left;
}
#navigation-links a#workbench .text { display : none; }
#navigation-links a#workbench img { 
	background-image : url(../graphics/icons/ctool/wb_nav_32.gif); 
	width : 32px; 
	height : 32px;
}

#navigation-links a#workbench:hover img,
#navigation-links a#workbench:focus img,
#navigation-links a#workbench:active img { 
	background-image : url(../graphics/icons/ctool/wb_nav_hover.gif); 
	width : 51px;
	height : 64px;
}

#action-links a.high-contrast img,
#action-links a.high-contrast:hover img,
#action-links a.high-contrast:focus img,
#action-links a.high-contrast:active img {
	display: none !important;
}

#action-links a.high-contrast .link-label,
#action-links a.high-contrast:hover .link-label,
#action-links a.high-contrast:focus .link-label,
#action-links a.high-contrast:active .link-label {
	display: block !important;
	text-decoration: underline;
	top : 5px;
}

/* 
 * Lay out the page title and description 
 */
h1, p { margin-left : 10px; } /* required in mozilla so the page description is properly indented */

/* position the page content so that the page title overlays the bottom
 * of the background image, but make sure the content is always on top 
 * (using z-index) */

#page-content {
	float : none;
	clear : both;
	text-align : center;
	position : relative;
	top : -50px;
	margin-bottom: -50px;
	z-index : 10;
}

#page-content p { 
	padding-bottom : 15px; 
	text-align : left; 
	float : none;
	clear : both;
}

/* Page content quadrants. Page content is placed in four quadrants.
 * Upper pair is separated from the bottom pair with a divider
 * to ensure bottom pair is aligned even with the uneven content
 * in the upper pair.
 */

#page-content #top-left {
  border: none; float: left; margin: 0px; padding: 0px; width: 49%;
  clear: left;
}
#page-content #top-right {
  border: none; float: right; margin: 0px; padding: 0px; width: 49%;
  clear: right;
}
/* top-bottom divider - runs the entire width to ensure
 * bottom boxes start at the same y
 */
#page-content #content-divider {
  border: none; float: none; margin: 0; padding: 0px; width: 100%;
  clear: both;
}

#page-content #bottom-left {
  border: none; float: left; margin: 0px; padding: 0px; width: 49%;
  clear: left;
}
#page-content #bottom-right {
  border: none; float: right; margin: 0px; padding: 0px; width: 49%;
  clear: right;
}

#page-content #content-header H4, .page-description {
	text-align : left;
	margin-right : 10px;
	float : none;
	clear : both;
}

#page-content * > a {
	vertical-align : middle; 
}

#page-content * a img {
	height : 57px;
	width : 57px;
	vertical-align : middle;
}	

#page-content * a .link-label {
	display : block;
	position : relative;
	top : -50px;
	left : 60px;
	margin-right: 60px;
}

#page-content * a > .link-label { left: 65px; }

#page-content * a p .text {
	display : block;
	position : relative;
	top : -45px;
	margin-bottom: -25px;
	left : 53px;
	margin-right: 53px;
}

#page-content * a p > .text { left: 58px; }

#page-content * a:hover { border-right : 5px; }

/* The following rules are for extensions in all pages. Extensions should be placed in
 * groups with the style 'content-group' and contain links with the style 'content-link'.
 * Group is important so that importance mixin style can be applied to the group that
 * uses block display. We need to see a solid rectangle around the extension, not 
 * a tight polygon around the link perimeter.
 */

.content-group {
	margin-left: 10px;
	margin-right: 10px;
	padding-left: 10px;
	padding-right: 10px;
	float : none;
	clear : both;
	text-align: left;
}

.content-link .link-label {
	font-family: Verdana, Arial, Helvetica; 
	font-weight: bold; 
	line-height:1.5;
	color: #00507C;
}

.content-link:hover .link-label {
	color: #69c; 
	text-decoration : underline;
}

.content-link .text {
	font-family: Verdana, Arial, Helvetica; 
	line-height: 1.3;
}

.categoryContentnav {
	font-family: Verdana, Arial, Helvetica; 
	font-weight: bold; 
	color: #4A4D4A; 
	line-height:1.3;
}

.contentpgNavhover {
	font-family: Verdana, Arial, Helvetica; 
	font-weight: bold; 
	color: #000; 
}

.topicList {
	font-family: Verdana, Arial, Helvetica; 
	line-height:1.75;
	color: #00507C;
}
/* ... */

